Sorted data file list

--- a/img_ban_mnist.ipynb
+++ b/img_ban_mnist.ipynb
@@ -92,9 +92,11 @@
     "    gray.save(path4 + '\\\\' + file, \"JPEG\" )\n",
     "\n",
     "imlist = os.listdir(path2)\n",
+    "imlist.sort()\n",
     "immatrix = array([array(Image.open(path2 + '\\\\' + im)).flatten() for im in imlist] , 'f')\n",
     "\n",
     "testlist = os.listdir(path4)\n",
+    "testlist.sort()\n",
     "testmatrix = array([array(Image.open(path4 + '\\\\' + im)).flatten() for im in testlist] , 'f')\n",
     "\n",
     "# m, n = immatrix.shape[0:2]"
